actually fixed spacing for exampless/reachout button

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -15,13 +15,24 @@
     width: 100%;
 }
 .basichyper {
-    background-color: black;
-    padding: 10px;
-    border-radius: 10px;
-    margin-right: 20px;
-    padding: 10px 25px;
+    display: flex;
+    flex: 1;
+    width: 60%;
 }
-.basichyper a {
+.base {
+    min-width: 7rem;
+    max-width: 12rem;
+    background-color: black;
+    /* padding: 10px; */
+    border-radius: 10px;
+    /* margin: 0 40px; */
+    padding: 10px 20px;
+    width: 95%;
+    text-align: center
+    /* flex-wrap:nowrap; */
+}
+.base a {
+    /* text-align: center; */
     font-weight: 1000;
     color: white;
     text-decoration: none;
@@ -29,6 +40,11 @@
 .hypercontainer {
     display: flex;
     flex-direction: row;
+    max-width: 25rem;
+    min-width: 16rem;
+    width: 100%;
+    /* outline: 2px solid lime; */
+    /* width: 30%; */
 }
 .from_name_container {
     /* width: 1rem; */
@@ -68,7 +84,9 @@
 
 @media (max-width: 768px) {
     .basichyper {
-        margin-right: 0px;
+        /* flex-direction: column; */
+        /* margin-right: 0px; */
+        width: 100%;
     }
     .message {
         /* margin-left: 1rem; */
@@ -84,7 +102,11 @@
         /* outline: 2px red solid; */
     }
     .hypercontainer {
-        justify-content: space-around;
+        /* flex-direction: column; */
+        width: 100%;
+        /* justify-content: space-between; */
+        /* align-items: stretch; */
+        /* gap: 1rem 5rem; */
     }
    
 
